--- a/style.styl
+++ b/style.styl
@@ -1,3 +1,4 @@
+/*    In the name of GOD :X    */
 /* 
  * Main Stylus file.
  * For compile it, first download node.js installer (ali.md/node.js) and install it
@@ -6,4 +7,4 @@
  * 
 */
 
-@import 'styles' // name of style folder
+@import 'styles/index' // name of style folder
