header style of header

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -11,9 +11,9 @@
 
 	@import '1stylus/layout_helper'
 
-	@import '1stylus/texts'
+	// @import '1stylus/texts'
 
-	@import '1stylus/grid'
+	// @import '1stylus/grid'
 
 	@import '1stylus/fontsize'
 
@@ -23,7 +23,9 @@
 
 	@import 'images'
 
-	// @import '...'
+	@import '1stylus/stylesheetaboutme'
+	
+	@import '1stylus/stylesheetheader'
 
 @media print
 
