--- a/styles/index.styl
+++ b/styles/index.styl
@@ -26,6 +26,8 @@
 	@import '1stylus/stylesheetaboutme'
 	
 	@import '1stylus/stylesheetheader'
+	
+	@import '1stylus/stylesheetContactMe'
 
 @media print
 
